[tool.poetry]
name = "science-containers"
version = "0.5.0"
description = "Science Containers for CANFAR"
authors = ["CANFAR <support@canfar.net>"]
license = "GNU Affero GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4"
mkdocstrings-python = "^1.7"
mkdocs-git-revision-date-localized-plugin = "^1.2"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
